# steam-library-organizer

./: AI_MIGRATION_PLAN.md  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
components/: CollectionManager.vue  GameCard.vue  GameChat.vue  GameDetailsModal.vue  GameFilters.vue  GameRecommendations.vue  SteamLoginModal.vue  UserProfile.vue
composables/: useAutoCollections.ts  useInfiniteScroll.ts  useLazyLoading.ts  useRecommendations.ts  useSteamConfig.ts  useSteamGames.ts
model-training/: README.md  main.py  prepare_training_data.py  pyproject.toml  steam_training_data.jsonl
scripts/: prepare_training_data.py  requirements.txt  train_model.py
server/api/: chat.post.ts  recommendations.post.ts
server/api/auth/: steam.get.ts
server/api/auth/steam/: callback.get.ts
server/api/steam/: games.get.ts  resolve.get.ts  user.get.ts
stores/: collections.ts
