[project]
name = "steam-model-training"
version = "0.1.0"
description = "Steam review data preparation and OpenAI fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18.0",
    "pandas>=2.0.3",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "huggingface-hub>=0.20.3",
]
